--- a/index.html
+++ b/index.html
@@ -19,6 +19,22 @@
         <div class="button-signup">
             <button>Sign Up</button>
         </div>
+        <div class="information-header">
         <div><img src="#" alt="this is a placeholder for an image"></div>
+        <div>Some random information</div>
+            <div class="content">
+                <ul>
+                    <li><img src="#" alt="img1">this is some subtext under an illustration or image</li>
+                    <li><img src="#" alt="img1">this is some subtext under an illustration or image</li>
+                    <li><img src="#" alt="img1">this is some subtext under an illustration or image</li>
+                    <li><img src="#" alt="img1">this is some subtext under an illustration or image</li>
+                </ul>
+            </div>
+            <div class="quote-section">
+                <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+                <div class="author">-Thor, God of Thunder</div>
+            </div>
+        </div>
+        
     </body>
 </html>
