--- a/index.html
+++ b/index.html
@@ -34,6 +34,16 @@
                 <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
                 <div class="author">-Thor, God of Thunder</div>
             </div>
+            <div class="call-action">
+                <div class="content">
+                    <div>Call to action! It's time!</div>
+                    <div>Sign up for our product by clicking that button right over there!</div>
+                </div>
+                <div class="button-signup">
+                    <button>Sign Up</button>
+                </div>
+            </div>
+            <div class="footer">Copyright The Odin Project 2021</div>
         </div>
         
     </body>
