--- a/index.html
+++ b/index.html
@@ -6,21 +6,28 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div class="elm1">
+        <div class="header bg1">
         <div class="header-logo">Header Logo</div>
         <div class="links">
             <ul>
-                <li><a href="#"></a>Header Link One</li>
-                <li><a href="#"></a>Header Link Two</li>
-                <li><a href="#"></a>Header Link Three</li>
+                <li><a href="#">header link one</a>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
             </ul>
         </div>
-        <div class="hero-main">This Website is awesome</div>
-        <div class="hero-secondary">This website has some subtext that goes here under the main title. It's smaller font and color is lower contrast</div>
-        <div class="button-signup">
-            <button>Sign Up</button>
         </div>
+        <div class="main">
+            <div>
+            <div class="hero-main">This website is awesome</div>
+            <div class="hero-secondary">This website has some subtext that goes here under the main title. It's smaller font and color is lower contrast</div>
+                <button>Sign up</button>
+            </div>  
+            <img src="./images/pexels-soumil-kumar-735911.jpg" alt="this is a placeholder for an image">
+        </div>
+        </div>
+        <div class="elm2">
         <div class="information-header">
-        <div><img src="#" alt="this is a placeholder for an image"></div>
         <div>Some random information</div>
             <div class="content">
                 <ul>
@@ -30,11 +37,13 @@
                     <li><img src="#" alt="img1">this is some subtext under an illustration or image</li>
                 </ul>
             </div>
-            <div class="quote-section">
+            </div>
+            </div>
+            <div class="elm3">
                 <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
                 <div class="author">-Thor, God of Thunder</div>
             </div>
-            <div class="call-action">
+            <div class="elm4">
                 <div class="content">
                     <div>Call to action! It's time!</div>
                     <div>Sign up for our product by clicking that button right over there!</div>
@@ -43,8 +52,7 @@
                     <button>Sign Up</button>
                 </div>
             </div>
-            <div class="footer">Copyright The Odin Project 2021</div>
-        </div>
+            <div class="elm5 footer bg1">Copyright The Odin Project 2021</div>
         
     </body>
 </html>
