--- a/index.html
+++ b/index.html
@@ -27,17 +27,13 @@
         </div>
         </div>
         <div class="elm2">
-        <div class="information-header">
         <div>Some random information</div>
-            <div class="content">
-                <ul>
-                    <li><img src="#" alt="img1">this is some subtext under an illustration or image</li>
-                    <li><img src="#" alt="img1">this is some subtext under an illustration or image</li>
-                    <li><img src="#" alt="img1">this is some subtext under an illustration or image</li>
-                    <li><img src="#" alt="img1">this is some subtext under an illustration or image</li>
+                <ul class="content">
+                    <li><img src="images/dylan-calluy-U6z77wRy0SE-unsplash.jpg" alt="img1">this is some subtext under an illustration or image</li>
+                    <li><img src="images/dylan-calluy-U6z77wRy0SE-unsplash.jpg" alt="img2">this is some subtext under an illustration or image</li>
+                    <li><img src="images/dylan-calluy-U6z77wRy0SE-unsplash.jpg" alt="img3">this is some subtext under an illustration or image</li>
+                    <li><img src="images/dylan-calluy-U6z77wRy0SE-unsplash.jpg" alt="img4">this is some subtext under an illustration or image</li>
                 </ul>
-            </div>
-            </div>
             </div>
             <div class="elm3">
                 <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
