Finished css Completed stylizing the landing page. However refinement in the css is required and restructuring of classes is required. Also the elm1 class style needs to be modified as its layout changes when zooming.

--- a/index.html
+++ b/index.html
@@ -41,12 +41,10 @@
             </div>
             <div class="elm4">
                 <div class="content">
-                    <div>Call to action! It's time!</div>
+                    <div class="call-main">Call to action! It's time!</div>
                     <div>Sign up for our product by clicking that button right over there!</div>
                 </div>
-                <div class="button-signup">
-                    <button>Sign Up</button>
-                </div>
+                    <button class="button-signup">Sign Up</button>
             </div>
             <div class="elm5 footer bg1">Copyright The Odin Project 2021</div>
         
